# xnbtv1

./: CMakeLists.txt  README.md  build.sh  main.cpp  manifest.json
.github/workflows/: build.yml
include/: NbtParser.hpp  NbtTypes.hpp
src/: main.cpp
